# funding-rate-arb-bot

./: Cargo.toml
src/: config.rs  errors.rs  lib.rs  main.rs
src/features/: mod.rs
